--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Herison Pereira (herisonp)",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.3"
   },
   "devDependencies": {
     "eslint": "7.32.0",
